# jarvis

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  version-bump.yml
docs/: SPEC.md  TODO.md  VISION.md
docs/specs/: CONSTITUTION.md  activity_tracker.md  brain.md  claude_sessions.md  config.md  correlator.md  db.md  evolve.md  firefox.md  ingest.md  installer.md  integrations.md  launcher.md  memory.md  patterns.md  pr_monitor.md  resolver.md  suggestions_engine.md  thunderbird.md  web.md  workflows.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
frontend/src/components/: AccountBadge.tsx  Nav.tsx  PendingBadge.tsx  SourceBadge.tsx
frontend/src/hooks/: useChatStream.ts  usePollRunning.ts
frontend/src/lib/: api.ts  queryClient.ts  stream.ts  types.ts
frontend/src/pages/: Chat.tsx  Insights.tsx  Search.tsx  Sessions.tsx  Settings.tsx  Summary.tsx  Timeline.tsx  Upcoming.tsx
frontend/src/pages/Prs/: PrCard.tsx  SimpleRows.tsx  badges.tsx  buttons.ts  index.tsx
frontend/src/pages/Upcoming/: ActiveSprintSection.tsx
jarvis/: __init__.py  __main__.py  activity.py  brain.py  cli.py  config.py  correlator.py  db.py  evolve.py  hooks.py  ingest.py  installer.py  launcher.py  memory.py  menubar.py  models.py  patterns.py  pr_monitor.py  pr_refresh.py  pr_review_prompts.py  resolver.py  sessions_backfill.py  sessions_tags.py  suggestions.py  updater.py
jarvis/integrations/: base.py  claude_sessions.py  firefox.py  gcal.py  git_local.py  github.py  jira.py  jira_boards.py  kafka.py  thunderbird.py
jarvis/migrations/: 005_pr_workspace.sql  011_pr_lifecycle.sql  014_claude_session_overrides.sql  016_pr_review_verdict.sql
jarvis/web/: app.py
jarvis/web/static/: index.html
jarvis/web/static/assets/: index-0BYrB1e9.css  index-BfNZCJiF.js  index-Bjif6EOI.js  index-BmagVI64.js  index-BrlC9MCJ.js  index-C5g5F0wB.js  index-CD-HGLcy.js  index-Cyiu1EOw.js  index-DnpK_osz.js  index-DydxB2z_.css  index-K1ylBtR0.css  index-R2wWKfcY.js
jarvis/web/templates/: _events.html  base.html  chat.html  insights.html  prs.html  search.html  sessions.html  summary.html  timeline.html  upcoming.html
jarvis/workflows/: standup.py  weekly_summary.py
migrations/: 001_initial.sql  002_phase6.sql  003_activity_unique.sql  004_kv.sql  006_repo_paths.sql  007_repo_paths_account.sql  008_pr_dismissed.sql  009_repo_paths_enabled.sql  010_pr_cache.sql  012_pr_priority.sql  013_jira_boards.sql  015_dedupe_claude_sessions.sql
scripts/: bootstrap.sh  build_shiv.sh
tests/: conftest.py  test_activity.py  test_brain.py  test_claude_sessions.py  test_config.py  test_correlator.py  test_db.py  test_evolve.py  test_firefox.py  test_hooks.py  test_installer.py  test_integrations.py  test_launcher.py  test_memory.py  test_patterns.py  test_pr_monitor.py  test_pr_review_prompts.py  test_prs_linked_sessions.py  test_resolver.py  test_sessions_backfill.py  test_sessions_tags.py  test_suggestions.py  test_thunderbird.py  test_updater.py  test_workflows.py
