[project]
name = "jarvis"
version = "0.1.0"
description = "Personal engineering assistant — tracks work, orchestrates sessions, automates workflows"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "httpx>=0.27",
    "pydantic-settings>=2",
    "python-ulid>=2",
    "keyring>=25",
    "tomli>=2",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "jinja2>=3.1",
]

[project.scripts]
jarvis = "jarvis.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "spec: links a test to a behaviour ID in docs/specs/ (e.g. @pytest.mark.spec('suggestions_engine.F2'))",
]
